deleted extra files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button type="submit">click here</button>
         </form>
         <section>
-            <h3>Here are your results!</h3>
+            <h3>Here are the results!</h3>
             <img class="results" alt="">
         </section>
     </div>
